[tool.poetry]
name = "TestAddressBook"
version = "0.1.0"
description = ""
authors = ["Vladimir Panferov <v3nseagal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.72.0"}
SQLAlchemy = "^1.4.29"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"
mimesis = "^5.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
